--- a/packages/redux-requests/.babelrc
+++ b/packages/redux-requests/.babelrc
@@ -1,8 +1,13 @@
 {
   "presets": [["@babel/preset-env", { "loose": true, "modules": false }]],
   "env": {
-    "test": {
+    "cjs": {
       "presets": [["@babel/preset-env", { "loose": true }]]
+    },
+    "test": {
+      "presets": [
+        ["@babel/preset-env", { "loose": true, "targets": {"node": "current"} } ]
+      ]
     }
   },
   "plugins": [
