--- a/packages/redux-requests/package.json
+++ b/packages/redux-requests/package.json
@@ -27,8 +27,8 @@
     "test": "jest src",
     "test:cover": "jest --coverage src",
     "test-types": "tsc types/index.d.spec.ts --noEmit --lib es2015",
-    "build:commonjs": "cross-env BABEL_ENV=test babel src --out-dir lib --ignore 'src/**/*.spec.js'",
-    "build:es": "cross-env babel src --out-dir es --ignore 'src/**/*.spec.js'",
+    "build:commonjs": "cross-env BABEL_ENV=cjs babel src --out-dir lib --ignore 'src/**/*.spec.js'",
+    "build:es": "babel src --out-dir es --ignore 'src/**/*.spec.js'",
     "build:umd": "webpack --mode development -o dist/redux-requests.js",
     "build:umd:min": "webpack --mode production -o dist/redux-requests.min.js",
     "build": "npm-run-all clean -p build:commonjs build:es build:umd build:umd:min",
