--- a/packages/redux-requests-graphql/.babelrc
+++ b/packages/redux-requests-graphql/.babelrc
@@ -1,18 +1,13 @@
 {
   "presets": [["@babel/preset-env", { "loose": true, "modules": false }]],
   "env": {
-    "test": {
+    "cjs": {
       "presets": [["@babel/preset-env", { "loose": true }]]
+    },
+    "test": {
+      "presets": [
+        ["@babel/preset-env", { "loose": true, "targets": {"node": "current"} } ]
+      ]
     }
-  },
-  "plugins": [
-    [
-      "@babel/plugin-transform-runtime",
-      {
-        "corejs": false,
-        "helpers": true,
-        "regenerator": true
-      }
-    ]
-  ]
+  }
 }
