--- a/packages/redux-requests-mock/package.json
+++ b/packages/redux-requests-mock/package.json
@@ -27,8 +27,8 @@
     "test": "jest src",
     "test:cover": "jest --coverage src",
     "test-types": "tsc types/index.d.spec.ts --noEmit --lib es2015",
-    "build:commonjs": "cross-env BABEL_ENV=test babel src --out-dir lib --ignore 'src/**/*.spec.js'",
-    "build:es": "cross-env babel src --out-dir es --ignore 'src/**/*.spec.js'",
+    "build:commonjs": "cross-env BABEL_ENV=cjs babel src --out-dir lib --ignore 'src/**/*.spec.js'",
+    "build:es": "babel src --out-dir es --ignore 'src/**/*.spec.js'",
     "build:umd": "webpack --mode development -o dist/redux-requests-mock.js",
     "build:umd:min": "webpack --mode production -o dist/redux-requests-mock.min.js",
     "build": "npm-run-all clean -p build:commonjs build:es build:umd build:umd:min",
@@ -41,7 +41,6 @@
   "devDependencies": {
     "@babel/cli": "7.8.4",
     "@babel/core": "7.9.6",
-    "@babel/plugin-transform-runtime": "7.9.6",
     "@babel/preset-env": "7.9.6",
     "babel-jest": "25.1.0",
     "babel-loader": "8.1.0",
@@ -58,9 +57,6 @@
     "typescript": "3.8.3",
     "webpack": "4.42.0",
     "webpack-cli": "3.3.11"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.2.0"
   },
   "publishConfig": {
     "access": "public"
