--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.2.6",
     "compression": "1.7.4",
     "express": "4.17.1",
+    "prism-react-renderer": "1.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
