--- a/packages/redux-requests-axios/package.json
+++ b/packages/redux-requests-axios/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@redux-requests/axios",
   "version": "0.9.2",
-  "description": "Axios driver for Redux-Requests, Redux addon to simplify AJAX requests",
+  "description": "Axios driver for redux-requests, declarative AJAX requests and automatic network state management for Redux",
   "main": "lib/index.js",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
@@ -16,7 +16,7 @@
     "fetch",
     "ajax"
   ],
-  "homepage": "https://github.com/klis87/redux-requests",
+  "homepage": "https://redux-requests.klisiczynski.com",
   "bugs": {
     "url": "https://github.com/klis87/redux-requests/issues"
   },
