--- a/packages/redux-requests-graphql/package.json
+++ b/packages/redux-requests-graphql/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@redux-requests/graphql",
   "version": "0.4.2",
-  "description": "GraphQL driver for Redux-Requests, Redux addon to simplify AJAX requests",
+  "description": "GraphQL driver for redux-requests, declarative AJAX requests and automatic network state management for Redux",
   "main": "lib/index.js",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
@@ -15,7 +15,7 @@
     "graphql",
     "ajax"
   ],
-  "homepage": "https://github.com/klis87/redux-requests",
+  "homepage": "https://redux-requests.klisiczynski.com",
   "bugs": {
     "url": "https://github.com/klis87/redux-requests/issues"
   },
