--- a/packages/redux-requests-mock/package.json
+++ b/packages/redux-requests-mock/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@redux-requests/mock",
   "version": "0.4.0",
-  "description": "Mocking driver for Redux-Requests, Redux addon to simplify AJAX requests",
+  "description": "Mocking driver for redux-requests, declarative AJAX requests and automatic network state management for Redux",
   "main": "lib/index.js",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
@@ -17,7 +17,7 @@
     "ajax",
     "mock"
   ],
-  "homepage": "https://github.com/klis87/redux-requests",
+  "homepage": "https://redux-requests.klisiczynski.com",
   "bugs": {
     "url": "https://github.com/klis87/redux-requests/issues"
   },
