--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -10,21 +10,24 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
-    "@babel/polyfill": "7.8.7",
+    "@babel/polyfill": "7.10.4",
+    "@redux-requests/axios": "0.10.0",
+    "@redux-requests/core": "0.31.0",
+    "@redux-requests/react": "0.4.8",
     "axios": "0.19.2",
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-redux": "7.2.0",
     "redux": "4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "7.8.7",
-    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
-    "@babel/preset-env": "7.8.7",
-    "@babel/preset-react": "7.8.3",
-    "babel-loader": "8.0.6",
+    "@babel/core": "7.10.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.10.4",
+    "@babel/preset-env": "7.10.4",
+    "@babel/preset-react": "7.10.4",
+    "babel-loader": "8.1.0",
     "html-webpack-plugin": "3.2.0",
-    "webpack": "4.42.0",
-    "webpack-dev-server": "3.10.3"
+    "webpack": "4.43.0",
+    "webpack-dev-server": "3.11.0"
   }
 }
