--- a/examples/server-side-rendering/package.json
+++ b/examples/server-side-rendering/package.json
@@ -11,27 +11,30 @@
     "build": "DEBUG=0 webpack --progress"
   },
   "dependencies": {
-    "@babel/polyfill": "7.8.7",
+    "@babel/polyfill": "7.10.4",
+    "@redux-requests/axios": "0.10.0",
+    "@redux-requests/core": "0.31.0",
+    "@redux-requests/react": "0.4.8",
     "axios": "0.19.2",
     "express": "4.17.1",
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-redux": "7.2.0",
     "redux": "4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "7.8.7",
-    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
-    "@babel/preset-env": "7.8.7",
-    "@babel/preset-react": "7.8.3",
-    "babel-loader": "8.0.6",
+    "@babel/core": "7.10.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.10.4",
+    "@babel/preset-env": "7.10.4",
+    "@babel/preset-react": "7.10.4",
+    "babel-loader": "8.1.0",
     "express-handlebars": "3.1.0",
-    "html-webpack-harddisk-plugin": "1.0.1",
+    "html-webpack-harddisk-plugin": "1.0.2",
     "html-webpack-plugin": "3.2.0",
-    "webpack": "4.42.0",
+    "webpack": "4.43.0",
     "webpack-dev-middleware": "3.7.2",
     "webpack-hot-middleware": "2.25.0",
-    "webpack-hot-server-middleware": "0.6.0",
-    "webpack-node-externals": "1.7.2"
+    "webpack-hot-server-middleware": "0.6.1",
+    "webpack-node-externals": "2.5.0"
   }
 }
