--- a/examples/showcase/package.json
+++ b/examples/showcase/package.json
@@ -10,28 +10,31 @@
     "start": "node dev-server"
   },
   "dependencies": {
-    "@babel/polyfill": "7.8.7",
+    "@babel/polyfill": "7.10.4",
     "@material-ui/core": "4.9.14",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.53",
+    "@redux-requests/axios": "0.10.0",
+    "@redux-requests/core": "0.31.0",
+    "@redux-requests/react": "0.4.8",
     "axios": "0.19.2",
     "express": "4.17.1",
     "prism-react-renderer": "1.1.1",
-    "react": "16.13.0",
+    "react": "16.13.1",
     "react-beautiful-dnd": "13.0.0",
-    "react-dom": "16.13.0",
+    "react-dom": "16.13.1",
     "react-redux": "7.2.0",
     "redux": "4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "7.8.7",
-    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
-    "@babel/preset-env": "7.8.7",
-    "@babel/preset-react": "7.8.3",
-    "babel-loader": "8.0.6",
+    "@babel/core": "7.10.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.10.4",
+    "@babel/preset-env": "7.10.4",
+    "@babel/preset-react": "7.10.4",
+    "babel-loader": "8.1.0",
     "babel-plugin-transform-imports": "2.0.0",
     "html-webpack-plugin": "3.2.0",
-    "webpack": "4.42.0",
+    "webpack": "4.43.0",
     "webpack-dev-middleware": "3.7.2"
   }
 }
