--- a/lerna.json
+++ b/lerna.json
@@ -9,8 +9,7 @@
         "packages/*/node_modules/**",
         "packages/*/dist/**",
         "packages/*/es/**",
-        "packages/*/lib/**",
-        "packages/*/package.json"
+        "packages/*/lib/**"
       ]
     }
   }
