--- a/packages/redux-requests/package.json
+++ b/packages/redux-requests/package.json
@@ -36,6 +36,7 @@
     "prepublish": "yarn run build"
   },
   "peerDependencies": {
+    "redux": ">=4.0.0",
     "reselect": ">=4.0.0"
   },
   "devDependencies": {
