--- a/examples/showcase/package.json
+++ b/examples/showcase/package.json
@@ -24,7 +24,8 @@
     "react-beautiful-dnd": "13.0.0",
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "reselect": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.5",
