--- a/examples/advanced/package.json
+++ b/examples/advanced/package.json
@@ -18,7 +18,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "reselect": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.5",
