--- a/examples/redux-act-integration/package.json
+++ b/examples/redux-act-integration/package.json
@@ -19,7 +19,8 @@
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
     "redux": "4.0.5",
-    "redux-act": "1.7.7"
+    "redux-act": "1.7.7",
+    "reselect": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.5",
