--- a/packages/redux-requests-promise/package.json
+++ b/packages/redux-requests-promise/package.json
@@ -28,8 +28,8 @@
     "test-types": "tsc types/index.d.spec.ts --noEmit --lib es2015,DOM",
     "build:commonjs": "cross-env BABEL_ENV=cjs babel src --out-dir lib --ignore 'src/**/*.spec.js'",
     "build:es": "babel src --out-dir es --ignore 'src/**/*.spec.js'",
-    "build:umd": "webpack --mode development -o dist/redux-requests-promise.js",
-    "build:umd:min": "webpack --mode production -o dist/redux-requests-promise.min.js",
+    "build:umd": "webpack --mode development -o dist --output-filename redux-requests-promise.js",
+    "build:umd:min": "webpack --mode production -o dist --output-filename redux-requests-promise.min.js",
     "build": "npm-run-all clean -p build:commonjs build:es build:umd build:umd:min",
     "build:watch": "nodemon --watch src --ignore src/**/*.spec.js --exec 'yarn run build:es'",
     "prepublish": "yarn run build"
@@ -54,8 +54,8 @@
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
     "typescript": "4.0.5",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.12"
+    "webpack": "5.3.2",
+    "webpack-cli": "4.1.0"
   },
   "publishConfig": {
     "access": "public"
