--- a/packages/redux-requests/package.json
+++ b/packages/redux-requests/package.json
@@ -29,8 +29,8 @@
     "test-types": "tsc types/index.d.spec.ts --noEmit --lib es2015",
     "build:commonjs": "cross-env BABEL_ENV=cjs babel src --out-dir lib --ignore 'src/**/*.spec.js'",
     "build:es": "babel src --out-dir es --ignore 'src/**/*.spec.js'",
-    "build:umd": "webpack --mode development -o dist/redux-requests.js",
-    "build:umd:min": "webpack --mode production -o dist/redux-requests.min.js",
+    "build:umd": "webpack --mode development -o dist --output-filename redux-requests.js",
+    "build:umd:min": "webpack --mode production -o dist --output-filename redux-requests.min.js",
     "build": "npm-run-all clean -p build:commonjs build:es build:umd build:umd:min",
     "build:watch": "nodemon --watch src --ignore src/**/*.spec.js --exec 'yarn run build:es'",
     "prepublish": "yarn run build"
@@ -61,8 +61,8 @@
     "reselect": "4.0.0",
     "rimraf": "3.0.2",
     "typescript": "4.0.5",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.12"
+    "webpack": "5.3.2",
+    "webpack-cli": "4.1.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
