Switched from airbnb eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,55 +1,82 @@
 {
-  "extends": "airbnb",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "prettier",
+    "prettier/react"
+  ],
+  "plugins": ["react"],
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "env": {
     "jest": true,
-    "browser": true
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   },
   "rules": {
-    "max-len": [0, 80],
-    "no-else-return": 0,
-    "no-confusing-arrow": 0,
-    "space-before-function-paren": 0,
-    "arrow-parens": 0,
-    "arrow-body-style": 0,
-    "indent": 0,
-    "func-names": 0,
-    "object-curly-newline": 0,
-    "function-paren-newline": 0,
-    "operator-linebreak": 0,
-    "no-throw-literal": 0,
-    "implicit-arrow-linebreak": 0,
-    "no-param-reassign": 0,
-    "no-nested-ternary": 0,
-    "no-plusplus": 0,
-    "no-continue": 0,
-    "max-classes-per-file": 0,
-    "no-restricted-syntax": 0,
-    "no-underscore-dangle": 0,
-    "prefer-promise-reject-errors": 0,
-    "import/prefer-default-export": 0,
-    "import/no-extraneous-dependencies": [
-      2,
-      { "peerDependencies": true, "devDependencies": false }
-    ],
-    "import/named": 2,
-    "react/jsx-filename-extension": 0,
+    "camelcase": 2,
+    "no-lonely-if": 2,
+    "no-tabs": 2,
+    "no-unneeded-ternary": 2,
+    "prefer-exponentiation-operator": 2,
+    "prefer-object-spread": 2,
+    "unicode-bom": 2,
+    "no-useless-rename": 2,
+    "no-var": 2,
+    "object-shorthand": 2,
+    "prefer-const": 2,
+    "no-useless-constructor": 2,
+    "no-useless-computed-key": 2,
+    "no-duplicate-imports": 2,
+    "prefer-template": 2,
+    "no-use-before-define": 2,
+    "no-undef-init": 2,
+    "no-shadow": 2,
+    "require-await": 2,
+    "no-useless-return": 2,
+    "no-useless-concat": 2,
+    "no-return-assign": 2,
+    "no-return-await": 2,
+    "no-template-curly-in-string": 2,
+    "no-unreachable-loop": 2,
+    "require-atomic-updates": 2,
+    "consistent-return": 2,
+    "curly": 2,
+    "eqeqeq": 2,
+    "no-else-return": 2,
+    "no-extra-bind": 2,
+    "no-lone-blocks": 2,
+    "no-self-compare": 2,
+    "no-sequences": 2,
+    "no-console": 1,
+
     "react/prop-types": 0,
-    "react/destructuring-assignment": 0,
-    "react/require-default-props": 0,
-    "react/jsx-one-expression-per-line": 0,
-    "react/forbid-foreign-prop-types": 0,
-    "react/jsx-props-no-spreading": 0,
-    "react/forbid-prop-types": 0
-  },
-  "overrides": [
-    {
-      "files": ["packages/**/*.spec.js"],
-      "rules": {
-        "import/no-extraneous-dependencies": [
-          2,
-          { "peerDependencies": false, "devDependencies": true }
-        ]
-      }
-    }
-  ]
+
+    "react/button-has-type": 2,
+    "react/no-access-state-in-setstate": 2,
+    "react/no-array-index-key": 2,
+    "react/no-redundant-should-component-update": 2,
+    "react/no-unsafe": 2,
+    "react/no-unused-state": 2,
+    "react/self-closing-comp": 2,
+    "react/style-prop-object": 2,
+    "react/jsx-boolean-value": 2,
+    "react/jsx-fragments": 2,
+    "react/jsx-no-script-url": 2,
+    "react/jsx-no-useless-fragment": 2,
+    "react/jsx-pascal-case": 2,
+    "react/jsx-filename-extension": 1
+  }
 }
