--- a/packages/redux-requests-axios/package.json
+++ b/packages/redux-requests-axios/package.json
@@ -46,11 +46,12 @@
     "babel-jest": "26.1.0",
     "babel-loader": "8.1.0",
     "cross-env": "7.0.2",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.18.3",
+    "eslint": "7.13.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "jest": "26.1.0",
     "nodemon": "2.0.4",
     "npm-run-all": "4.1.5",
