--- a/packages/redux-requests-react/package.json
+++ b/packages/redux-requests-react/package.json
@@ -41,37 +41,37 @@
   },
   "dependencies": {
     "prop-types": "^15.5.7",
-    "react-is": "^16.13.1"
+    "react-is": ">=16.13.1"
   },
   "devDependencies": {
     "@babel/cli": "7.12.7",
     "@babel/core": "7.12.7",
     "@babel/preset-env": "7.12.7",
     "@babel/preset-react": "7.12.7",
-    "@types/react": "16.9.55",
-    "babel-jest": "26.1.0",
+    "@types/react": "17.0.0",
+    "babel-jest": "26.6.3",
     "babel-loader": "8.2.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "cross-env": "7.0.2",
-    "eslint": "7.13.0",
+    "eslint": "7.14.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "26.1.0",
-    "nodemon": "2.0.4",
+    "jest": "26.6.3",
+    "nodemon": "2.0.6",
     "npm-run-all": "4.1.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
-    "react-test-renderer": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
+    "react-test-renderer": "17.0.1",
     "redux": "4.0.5",
     "redux-mock-store": "1.5.4",
     "rimraf": "3.0.2",
-    "typescript": "4.0.5",
-    "webpack": "5.4.0",
-    "webpack-cli": "4.1.0"
+    "typescript": "4.1.2",
+    "webpack": "5.6.0",
+    "webpack-cli": "4.2.0"
   },
   "publishConfig": {
     "access": "public"
