--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "lerna run build",
     "clean": "lerna run clean",
     "lint": "lerna run lint",
+    "lint-examples": "eslint 'examples/**/src/**'",
     "test": "jest packages/*/src",
     "test:cover": "jest --coverage packages/*/src",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
