--- a/examples/mock-and-multiple-drivers/package.json
+++ b/examples/mock-and-multiple-drivers/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "8.1.0",
     "html-webpack-plugin": "3.2.0",
     "webpack": "4.43.0",
+    "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.11.0"
   }
 }
