Removed redundant object-rest-spread babel plugin from examples

--- a/examples/showcase/.babelrc
+++ b/examples/showcase/.babelrc
@@ -8,7 +8,7 @@
     ],
     "@babel/preset-react"
   ],
-  "plugins": ["@babel/plugin-proposal-object-rest-spread",
+  "plugins": [
     [
       "transform-imports",
       {
