--- a/examples/mock-and-multiple-drivers/package.json
+++ b/examples/mock-and-multiple-drivers/package.json
@@ -7,29 +7,29 @@
   "author": "Konrad Lisiczynski <klisiczynski@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack serve"
   },
   "dependencies": {
-    "@babel/polyfill": "7.10.4",
+    "@babel/polyfill": "7.12.1",
     "@redux-requests/axios": "1.0.0",
-    "@redux-requests/core": "1.0.0",
+    "@redux-requests/core": "1.2.0",
     "@redux-requests/mock": "1.0.0",
-    "@redux-requests/react": "1.0.0",
-    "axios": "0.19.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
+    "@redux-requests/react": "1.2.0",
+    "axios": "0.21.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
     "redux": "4.0.5",
     "reselect": "4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.10.5",
-    "@babel/preset-env": "7.10.4",
-    "@babel/preset-react": "7.10.4",
-    "babel-loader": "8.1.0",
-    "html-webpack-plugin": "3.2.0",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.10",
+    "@babel/core": "7.12.9",
+    "@babel/preset-env": "7.12.7",
+    "@babel/preset-react": "7.12.7",
+    "babel-loader": "8.2.1",
+    "html-webpack-plugin": "4.5.0",
+    "webpack": "5.6.0",
+    "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0"
   }
 }
