--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 script:
   - yarn run build
   - yarn run lint
+  - yarn run lint-examples
   - yarn run test:cover
   - yarn run test-types
   - yarn run bundlesize
