Added auto dispatch to React useQuery

--- a/.eslintrc
+++ b/.eslintrc
@@ -92,6 +92,8 @@
     "react/jsx-no-script-url": 2,
     "react/jsx-no-useless-fragment": 2,
     "react/jsx-pascal-case": 2,
-    "react/jsx-filename-extension": 2
+    "react/jsx-filename-extension": 2,
+
+    "react-hooks/exhaustive-deps": 0
   }
 }
