--- a/examples/suspense-ssr/package.json
+++ b/examples/suspense-ssr/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-server-side-rendering-example",
+  "name": "redux-suspense-ssr-example",
   "version": "1.0.0",
-  "description": "redux-requests server side rendering example",
+  "description": "redux-requests suspense SSR example",
   "main": "src/index.js",
   "repository": "git@github.com:klis87/redux-requests.git",
   "author": "Konrad Lisiczynski <klisiczynski@gmail.com>",
@@ -18,6 +18,7 @@
     "axios": "0.21.0",
     "express": "4.17.1",
     "react": "16.9.0",
+    "react-async-ssr": "0.7.2",
     "react-dom": "16.9.0",
     "react-redux": "7.2.2",
     "redux": "4.0.5",
