--- a/packages/redux-requests-graphql/package.json
+++ b/packages/redux-requests-graphql/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@redux-requests/graphql",
   "version": "1.1.0",
-  "description": "GraphQL driver for redux-requests, declarative AJAX requests and automatic network state management for Redux",
+  "description": "GraphQL driver for redux-requests, declarative AJAX requests and automatic network state management for single-page applications",
   "main": "lib/index.js",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
