--- a/examples/suspense-ssr/package.json
+++ b/examples/suspense-ssr/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@babel/polyfill": "7.12.1",
     "@redux-requests/axios": "1.1.1",
-    "@redux-requests/core": "1.4.0",
-    "@redux-requests/react": "1.4.1",
+    "@redux-requests/core": "1.5.0",
+    "@redux-requests/react": "1.5.0",
     "axios": "0.21.0",
     "express": "4.17.1",
+    "express-ws": "4.0.0",
     "react": "16.9.0",
     "react-async-ssr": "0.7.2",
     "react-dom": "16.9.0",
