test-types(redux-requests-react): enable ts `strict` mode

--- a/packages/redux-requests-react/package.json
+++ b/packages/redux-requests-react/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint 'src/**'",
     "test": "jest src",
     "test:cover": "jest --coverage src",
-    "test-types": "tsc types/index.d.spec.tsx --noEmit --lib es2015 --jsx react",
+    "test-types": "tsc types/index.d.spec.tsx --noEmit --strict --lib es2015 --jsx react",
     "build:commonjs": "cross-env BABEL_ENV=cjs babel src --out-dir lib --ignore 'src/**/*.spec.js'",
     "build:es": "babel src --out-dir es --ignore 'src/**/*.spec.js'",
     "build:umd": "webpack --mode development -o dist --output-filename redux-requests-react.js",
