test-types: enable `strict` mode in `redux-requests-axios`, `redux-requests-fetch`, `redux-requests-graphql`, `redux-requests-mock` & `redux-requests-promise` packages

--- a/packages/redux-requests-axios/package.json
+++ b/packages/redux-requests-axios/package.json
@@ -25,7 +25,7 @@
     "lint": "eslint 'src/**'",
     "test": "jest src",
     "test:cover": "jest --coverage src",
-    "test-types": "tsc types/index.d.spec.ts --noEmit --lib es2015",
+    "test-types": "tsc types/index.d.spec.ts --noEmit --strict --lib es2015",
     "build:commonjs": "cross-env BABEL_ENV=cjs babel src --out-dir lib --ignore 'src/**/*.spec.js'",
     "build:es": "cross-env babel src --out-dir es --ignore 'src/**/*.spec.js'",
     "build:umd": "webpack --mode development -o dist --output-filename redux-requests-axios.js",
