--- a/packages/redux-requests-graphql/package.json
+++ b/packages/redux-requests-graphql/package.json
@@ -24,7 +24,7 @@
     "lint": "eslint 'src/**'",
     "test": "jest src",
     "test:cover": "jest --coverage src",
-    "test-types": "tsc types/index.d.spec.ts --noEmit --lib es2015",
+    "test-types": "tsc types/index.d.spec.ts --noEmit --strict --lib es2015",
     "build:commonjs": "cross-env BABEL_ENV=cjs babel src --out-dir lib --ignore 'src/**/*.spec.js'",
     "build:es": "babel src --out-dir es --ignore 'src/**/*.spec.js'",
     "build:umd": "webpack --mode development -o dist --output-filename redux-requests-graphql.js",
