--- a/packages/redux-requests-fetch/package.json
+++ b/packages/redux-requests-fetch/package.json
@@ -53,13 +53,15 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "isomorphic-fetch": "3.0.0",
     "jest": "26.6.3",
     "nodemon": "2.0.6",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
     "typescript": "4.1.2",
     "webpack": "5.9.0",
-    "webpack-cli": "4.2.0"
+    "webpack-cli": "4.2.0",
+    "yet-another-abortcontroller-polyfill": "0.0.4"
   },
   "publishConfig": {
     "access": "public"
